# no_name

./: .env  .gitignore  pyproject.toml  requirements.txt
app/: config.py  main.py
app/auth/router/: router_fa.py
deploy/dockerfiles/: Dockerfile
